add visibility field

--- a/src/views/vWtracks/upload.ejs
+++ b/src/views/vWtracks/upload.ejs
@@ -24,6 +24,10 @@
             <label for="mp3-upload">Choose mp3 file</label>
             <input type="file" name="mp3_file" id="mp3-upload" accept="audio/*">
         </div>
+        <div>
+            <label for="visibility">Visibility</label>
+            <input type="checkbox" name="visibility" id="visibility">
+        </div>
         <label for="upload-lyrics">Lyrics</label>
         <textarea name="upload-lyrics" id="upload-lyrics" rows="30"></textarea>
     </fieldset>
