change name attribute upload lyrics text field

--- a/src/views/vWtracks/upload.ejs
+++ b/src/views/vWtracks/upload.ejs
@@ -29,7 +29,7 @@
             <input type="checkbox" name="visibility" id="visibility">
         </div>
         <label for="upload-lyrics">Lyrics</label>
-        <textarea name="upload-lyrics" id="upload-lyrics" rows="30"></textarea>
+        <textarea name="upload_lyrics" id="upload-lyrics" rows="30"></textarea>
     </fieldset>
 
     <button type="submit">Upload</button>
