--- a/src/views/vWtracks/track_detail.ejs
+++ b/src/views/vWtracks/track_detail.ejs
@@ -1,5 +1,7 @@
 <h1><%= track.track_title %></h1>
+<% if (artist) { %>
 <h2><%= artist.artist_name %></h2>
+<% } %>
 <% if (album) { %>
 <img src="<%= album.album_cover_image %>" alt="" height="300px">
 <% } %>
