update type for source to audio/*

--- a/src/views/partials/player.ejs
+++ b/src/views/partials/player.ejs
@@ -26,7 +26,7 @@
 </div>
 
 <audio id="audio-player">
-    <source src="" type="audio/mp3" id="audio-player-src">
+    <source src="" type="audio/*" id="audio-player-src">
 </audio>
 
 <script src="/js/player.js"></script>
