adjust structure of track list items

--- a/src/views/vwArtists/artist_album.ejs
+++ b/src/views/vwArtists/artist_album.ejs
@@ -15,13 +15,10 @@
             <ul id="album-song-list">
                 <% tracks.forEach(track => { %>
                     <li>
-                        <% let path=track.track_mp3_path.includes("https://hlocstorage.blob.core.windows.net/music/") ? track.track_mp3_path
-                            : "https://hlocstorage.blob.core.windows.net/music/" + track.track_mp3_path; %>
-                        
-                            <a href="#" class="song-link" data-mp3-path="<%= path %>" data-title="<%= track.track_title %>"
-                                data-artist="<%= artist.artist_name %>">
-                                <%= track.track_title %>
-                            </a>
+                        <button class="play-track-btn" onclick="playTrack('<%= track.track_id %>')"><i class="bi bi-play-fill"></i></button>                        
+                        <a href="/tracks/<%= track.track_id %>" class="song-link">
+                            <%= track.track_title %>
+                        </a>
                     </li>
                 <% }); %>
             </ul>
