update play button and duration for tracks

--- a/src/views/vwArtists/artist_album.ejs
+++ b/src/views/vwArtists/artist_album.ejs
@@ -15,10 +15,17 @@
             <ul id="album-song-list">
                 <% tracks.forEach(track => { %>
                     <li>
-                        <button class="play-track-btn" onclick="playTrack('<%= track.track_id %>')"><i class="bi bi-play-fill"></i></button>                        
-                        <a href="/tracks/<%= track.track_id %>" class="song-link">
-                            <%= track.track_title %>
-                        </a>
+                        <div>
+                            <button class="play-track-btn" onclick="playTrack('<%= track.track_id %>')"><i class="bi bi-play-fill"></i></button>
+                            <a href="/tracks/<%= track.track_id %>" class="song-link">
+                                <%= track.track_title %>
+                            </a>
+                        </div>
+                        <% const track_duration_minute=Math.floor(+track.track_duration / 60) %>
+                        <% const track_duration_second=+track.track_duration % 60 %>
+                        <span class="song-duration">
+                            <%= track_duration_minute %>:<%= track_duration_second %>
+                        </span>
                     </li>
                 <% }); %>
             </ul>
