--- a/src/public/css/upload.css
+++ b/src/public/css/upload.css
@@ -17,6 +17,7 @@
             width: 100%;
             margin: 0;  /* Reset any browser default margins */
             box-sizing: border-box;
+            
         }
 
         form fieldset * {
@@ -87,13 +88,13 @@
             border: none;
             border-radius: 6px;
             font-size: 1.3rem;
-            padding: 12px 24px;
+            padding: 12px 24px 12px;
             font-weight: 600;
             cursor: pointer;
             transition: all 0.3s ease;
             width: 100%;
             box-sizing: border-box;
-            margin-top: 25px;
+            margin-top: 10px;
         }
 
         form button[type="submit"]:hover {
