--- a/src/views/vwPlaylist/playlist.ejs
+++ b/src/views/vwPlaylist/playlist.ejs
@@ -1,3 +1,6 @@
+<h1>
+<a href="/playlists/create">CREATE PLAYLIST</a>
+</h1>
 <link rel="stylesheet" href="/css/playlist.css">
   <div class="artist-page">
     <div class="artist-header">
