--- a/src/views/vwPlaylist/playlist.ejs
+++ b/src/views/vwPlaylist/playlist.ejs
@@ -29,4 +29,29 @@
       </ul>
     </div>
   </div>
+  <div class="playlist">
+    <div class="playlist-header">
+      <h2>Workout Mix</h2>
+      <button class="arrow-btn">
+        <i class="bi bi-chevron-down"></i>
+      </button>
+    </div>
+    <div class="playlist-content">
+      <ul class="song-list">
+        <li class="song-item">
+          <a href="#" class="song-link">Power Up</a>
+          <span class="song-duration">3:55</span>
+        </li>
+        <li class="song-item">
+          <a href="#" class="song-link">Running High</a>
+          <span class="song-duration">4:15</span>
+        </li>
+        <li class="song-item">
+          <a href="#" class="song-link">Maximum Energy</a>
+          <span class="song-duration">3:30</span>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
 </div>
