Adding js to open playlist when needed, but linking it later to another tab maybe?

--- a/src/views/vwPlaylist/playlist.ejs
+++ b/src/views/vwPlaylist/playlist.ejs
@@ -55,3 +55,11 @@
   </div>
 </div>
 </div>
+<script>
+  document.querySelectorAll('.playlist-header').forEach(header => {
+    header.addEventListener('click', () => {
+      const playlist = header.parentElement;
+      playlist.classList.toggle('active');
+    });
+  });
+</script>
