Adding div end elements and js to file to test UI

--- a/src/views/vwPlaylist/playlist.ejs
+++ b/src/views/vwPlaylist/playlist.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/css/playlist.css">
 <div class="top-header">
-  <h1 class="greeting">Hello, {Username gì đó}, what is your playlist to listen to today?</h1>
+  <h1 class="greeting">Hello, {Tên người dùng gì đó}, what is your playlist to listen to today?</h1>
   <a href="/playlists/create" class="create-playlist">CREATE PLAYLIST</a>
 </div>
 
@@ -29,6 +29,7 @@
       </ul>
     </div>
   </div>
+
   <div class="playlist">
     <div class="playlist-header">
       <h2>Workout Mix</h2>
@@ -53,7 +54,6 @@
       </ul>
     </div>
   </div>
-</div>
 </div>
 <script>
   document.querySelectorAll('.playlist-header').forEach(header => {
