Update css link for plalist-detail

--- a/src/views/vwPlaylist/playlist_detail.ejs
+++ b/src/views/vwPlaylist/playlist_detail.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/css/playlist-detail.css">
 <p>Playlist name: <%= playlist.playlist_name %></p>
 <p>Playlist visibility mode: <%= playlist.playlist_visibility_mode %></p>
 <p>Owner ID: <%= owner.user_id %></p>
