add some missing from previous commits

--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -17,7 +17,7 @@
         </button>
         <div class="dropdown-content" id="dropdown-profile">
             <a href="#">Account</a>
-            <a href="#">Profile</a>
+            <a href="/profile">Profile</a>
             <a href="/logout">Logout</a>
         </div>
     </div>
