update sidebar name for playlists

--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -9,7 +9,7 @@
         <li><a href="#" class="side-link"><i class="bi bi-collection-play-fill"></i>Library</a></li>
     </ul>
     <ul>
-        <li><a href="/playlists" class="side-link"><i class="bi bi-plus-square-fill"></i>Create Playlist</a></li>
+        <li><a href="/playlists" class="side-link"><i class="bi bi-plus-square-fill"></i>Playlists</a></li>
         <li><a href="/tracks" class="side-link"><i class="bi bi-chat-square-heart-fill"></i></i>Liked Songs</a></li>
         <li><a href="/artists" class="side-link"><i class="bi bi-wifi"></i>Artists</a></li>
     </ul>
