--- a/src/views/vWtracks/track_detail.ejs
+++ b/src/views/vWtracks/track_detail.ejs
@@ -5,4 +5,9 @@
 <% if (album) { %>
 <img src="<%= album.album_cover_image %>" alt="" height="300px">
 <% } %>
+
+<button class="like-btn <%= liked ? 'liked' : '' %>" data-type="track" data-id="<%= track.track_id %>">
+    <i class="bi <%= liked ? 'bi-heart-fill' : 'bi-heart' %>"></i>
+</button>
+
 <pre><%= track.lyrics %></pre>
