--- a/src/views/vwArtists/artist_detail.ejs
+++ b/src/views/vwArtists/artist_detail.ejs
@@ -1,10 +1,10 @@
-<link rel="stylesheet" href="/css/artist-home.css">
+<link rel="stylesheet" href="/css/artist-detail.css">
 <div class="artist-page">
     <div class="artist-header">
         <img src="<%= artist.artist_pic_path %>" alt="<%= artist.artist_name %>">
         <h1><%= artist.artist_name %></h1>
     </div>
-
+    
     <div class="albums-container">
         <h2>Albums</h2>
         <div class="albums-scroll">
