--- a/src/views/vwProfile/my_profile.ejs
+++ b/src/views/vwProfile/my_profile.ejs
@@ -14,12 +14,29 @@
             </a>
         </div>
         <% const track_duration_minute=Math.floor(+track.track_duration / 60) %>
-            <% const track_duration_second=+track.track_duration % 60 %>
-                <span class="song-duration">
-                    <%= track_duration_minute %>:<%= track_duration_second %>
-                </span>
+        <% const track_duration_second=+track.track_duration % 60 %>
+        <span class="song-duration">
+            <%= track_duration_minute %>:<%= track_duration_second %>
+        </span>
     </li>
     <% }); %>
 </ul>
 
 <h1>Liked playlists</h1>
+
+<h1>Liked artists</h1>
+<ul>
+    <% liked_artists.forEach(artist => { %>
+        <li>
+            <a href="/artists/<%= artist.artist_id %>" class="artist-link">
+                <div class="artist-image-container">
+                    <img src="<%= artist.artist_pic_path %>" alt="<%= artist.artist_name %>" class="artist-image" width="100px">
+                    <div class="artist-overlay"></div>
+                </div>
+                <p class="artist-name">
+                    <%= artist.artist_name %>
+                </p>
+            </a>
+        </li>
+    <% }); %>
+</ul>
