--- a/src/views/vwPlaylist/playlist_detail.ejs
+++ b/src/views/vwPlaylist/playlist_detail.ejs
@@ -6,21 +6,4 @@
 
 <p>Tracks: </p>
 
-<ul>
-    <% tracks.forEach(track=> { %>
-        <li>
-            <div>
-                <button class="play-track-btn" onclick="playTrack('<%= track.track_id %>')"><i
-                        class="bi bi-play-fill"></i></button>
-                <a href="/tracks/<%= track.track_id %>" class="song-link">
-                    <%= track.track_title %>
-                </a>
-            </div>
-            <% const track_duration_minute=Math.floor(+track.track_duration / 60) %>
-                <% const track_duration_second=+track.track_duration % 60 %>
-                    <span class="song-duration">
-                        <%= track_duration_minute %>:<%= track_duration_second %>
-                    </span>
-        </li>
-    <% }); %>
-</ul>
+<%- include('../partials/track_list', {tracks: tracks}) %>
