color for texts

--- a/src/views/partials/track_list.ejs
+++ b/src/views/partials/track_list.ejs
@@ -19,7 +19,9 @@
     }
 
     .track-item-duration{
-        color: gray
+        color: gray;
+        padding-right: 10px;
+        padding-top: 5px
     }
 
     button.play-track-btn{
@@ -38,6 +40,11 @@
     button.play-track-btn:hover{
         background: white;
         color: black
+    }
+    .track-item-left .song-link{
+        color: var(--secondary-text-color);
+        font-weight: 300;
+        font-size: larger;
     }
 </style>
 
