--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -3,19 +3,24 @@
     <div class="logo">
         <img src="/images/pinterest_profile_image.png" alt="Logo" height="70px">
     </div>
-    <ul>
-        <li><a href="/home" class="side-link" active><i class="bi bi-house-door-fill"></i>Home</a></li>
-        <li><a href="#" class="side-link"><i class="bi bi-search"></i>Search</a></li>
-        <li><a href="#" class="side-link"><i class="bi bi-collection-play-fill"></i>Library</a></li>
-    </ul>
-    <ul>
-        <li><a href="/playlists" class="side-link"><i class="bi bi-plus-square-fill"></i>Playlists</a></li>
-        <li><a href="/tracks" class="side-link"><i class="bi bi-chat-square-heart-fill"></i></i>Liked Songs</a></li>
-        <li><a href="/artists" class="side-link"><i class="bi bi-wifi"></i>Artists</a></li>
-    </ul>
-    <ul>
+<ul>
+    <!-- Main Navigation -->
+    <li><a href="/home" class="side-link"><i class="bi bi-house-door-fill"></i>Home</a></li>
+    <li><a href="/search" class="side-link"><i class="bi bi-search"></i>Search</a></li>
+</ul>
+<ul>
+    <!-- User Content -->
+    <li><a href="/library" class="side-link"><i class="bi bi-chat-square-heart-fill"></i>Library</a></li>
+</ul>
+<ul>
+    <!-- Explore -->
+    <li><a href="/tracks" class="side-link"><i class="bi bi-music-note-list"></i>Tracks</a></li>
+    <li><a href="/playlists" class="side-link"><i class="bi bi-collection-play-fill"></i>Playlists</a></li>
+    <li><a href="/artists" class="side-link"><i class="bi bi-people-fill"></i>Artists</a></li>
+    <li><a href="/albums" class="side-link"><i class="bi bi-disc-fill"></i>Albums</a></li>
+    <li><a href="/genres" class="side-link"><i class="bi bi-music-note-beamed"></i>Genres</a></li>
+</ul>
 
-    </ul>
 </aside>
 
 <script>
