--- a/src/views/partials/player.ejs
+++ b/src/views/partials/player.ejs
@@ -1,11 +1,12 @@
 <link rel="stylesheet" href="/css/player.css">
 <div class="footer-player">
-    <div class="player-song-info">
+    <div id="player-song-info">
         <img class="player-album-img" src="/images/albums/default.jpg" alt="Album Cover">
         <div class="player-song-details">
             <span class="player-track-title">Track Title</span>
             <span class="player-track-artist">Track Artist</span>
-        </div>
+    </div>
+
     </div>
     <div class="player-controls">
         <div class="player-control-btn">
