--- a/src/public/css/player.css
+++ b/src/public/css/player.css
@@ -9,7 +9,7 @@
 	bottom: 0;
 	width: 100%;
 	left: 0;
-	gap: 15%;
+	gap: 15px;
 }
 
 .control-btn {
@@ -51,7 +51,7 @@
 }
 
 .player-controls {
-	width: 50%;
+	width: 40%;
 	display: flex;
 	flex-direction: column;
 }
@@ -70,7 +70,42 @@
 .player-volume input {
 	cursor: pointer;
 }
+
 .progress-bar input {
 	width: 100%;
 	cursor: pointer;
+}
+
+.queue-manip {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+.manip-btn {
+	position: relative;
+	cursor: pointer;
+	background: transparent;
+}
+
+.manip-btn::after {
+	content: "";
+	position: absolute;
+	bottom: 3px;
+	left: 50%;
+	transform: translateX(-50%);
+	height: 6px;
+	width: 6px;
+	background-color: green;
+	border-radius: 50%;
+	opacity: 0;
+	transition: opacity 0.3s;
+}
+
+.manip-btn.active::after {
+	opacity: 1;
+}
+
+.manip-btn.active {
+	color: green;
 }
