--- a/src/views/partials/player.ejs
+++ b/src/views/partials/player.ejs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/css/player.css">
 <div class="footer-player">
     <div id="player-song-info">
-        <img class="player-album-img" src="/images/albums/default.jpg" alt="Album Cover">
+        <img class="player-album-img" src="/images/albums/default_album.jpg" alt="Album Cover">
         <div class="player-song-details">
             <span class="player-track-title">Track Title</span>
             <span class="player-track-artist">Track Artist</span>
@@ -19,8 +19,10 @@
             <button onclick="loop()" class="manip-btn control-btn"><i class="bi bi-arrow-repeat"></i></button>
         </div>
         <div class="progress-bar">
+            <span class="player-current-time">--:--</span>
             <input type="range" id="progress" value="0" min="0" max="100" step="1" class="progress-input"
                 onchange="setProgress()">
+            <span class="player-end-time">--:--</span>
         </div>
     </div>
     <div class="player-volume">
