--- a/src/public/css/player.css
+++ b/src/public/css/player.css
@@ -12,6 +12,18 @@
 	gap: 15px;
 }
 
+.player-track-title {
+	color: var(--main-text-color);
+	font-size: large;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+.player-track-artist {
+	color: gray;
+}
+
 .control-btn {
 	width: 40px;
 	height: 40px;
@@ -48,6 +60,8 @@
 
 .player-album-img {
 	border-radius: 50%;
+	width: 50px;
+	height: 50px;
 }
 
 .player-controls {
