--- a/src/views/partials/player.ejs
+++ b/src/views/partials/player.ejs
@@ -3,7 +3,7 @@
     <div id="player-song-info">
         <img class="player-album-img" src="/images/albums/default_album.jpg" alt="Album Cover">
         <div class="player-song-details">
-            <span class="player-track-title">Track Title</span>
+            <span class="player-track-title"><a href="">Track Title</a></span>
             <span class="player-track-artist">Track Artist</span>
         </div>
         <button class="like-btn" data-type="track" data-id="">
