Adding adjustment for UX-friendly, title for player

--- a/src/views/partials/player.ejs
+++ b/src/views/partials/player.ejs
@@ -12,11 +12,11 @@
     </div>
     <div class="player-controls">
         <div class="player-control-btn">
-            <button onclick="shuffle()" class="manip-btn control-btn"><i class="bi bi-shuffle"></i></button>
-            <button onclick="prevAudio()" class="control-btn prev-btn"><i class="bi bi-skip-backward-fill"></i></button>
-            <button onclick="playAudio()" class="control-btn play-btn"><i class="bi bi-play-fill"></i></button>
-            <button onclick="nextAudio()" class="control-btn next-btn"><i class="bi bi-skip-forward-fill"></i></button>
-            <button onclick="loop()" class="manip-btn control-btn"><i class="bi bi-arrow-repeat"></i></button>
+            <button onclick="shuffle()" class="manip-btn control-btn"><i class="bi bi-shuffle" title="shuffle"></i></button>
+            <button onclick="prevAudio()" class="control-btn prev-btn"><i class="bi bi-skip-backward-fill"title="back to previous song"></i></button>
+            <button onclick="playAudio()" class="control-btn play-btn"><i class="bi bi-play-fill"title="play/pause music"></i></button>
+            <button onclick="nextAudio()" class="control-btn next-btn"><i class="bi bi-skip-forward-fill"title="go to next song"></i></button>
+            <button onclick="loop()" class="manip-btn control-btn"><i class="bi bi-arrow-repeat"title="turn on song loops"></i></button>
         </div>
         <div class="progress-bar">
             <span class="player-current-time">--:--</span>
