--- a/src/views/vwPlaylist/playlist.ejs
+++ b/src/views/vwPlaylist/playlist.ejs
@@ -1,39 +1,30 @@
 <link rel="stylesheet" href="/css/playlist.css">
-
+<main>
 <div class="top-header">
   <h1 class="greeting">Hello, <%= username %>, what is your playlist to listen to today?</h1>
   <a href="/playlists/create" class="create-playlist">CREATE PLAYLIST</a>
 </div>
 
 <div class="playlist-container">
-  <% playlists.forEach(playlist => { %>
-    <div class="playlist">
-      <div class="playlist-header">
-        <h2>
-          <a href="/playlists/<%= playlist.playlist_id %>"> 
-            <%= playlist.playlist_name %>
-          </a>
-        </h2>
-        <button class="arrow-btn">
-          <i class="bi bi-chevron-down"></i>
-        </button>
-      </div>
-      <div class="playlist-content">
-        <ul class="song-list">
-          <% tracks[playlist.playlist_id].forEach(track => { %>
-            <li class="song-item">
-              <a href="/tracks/<%= track.track_id %>" class="song-link">
-                <%= track.track_title %>
-              </a>
-              <span class="song-duration"><%= Math.floor(track.track_duration / 60)%>:<%= track.track_duration % 60 %></span>
-            </li>
-          <% }); %>
-        </ul>
-      </div>
-    </div>
-  <% }); %>
+	<% playlists.forEach(playlist => { %>
+	<div class="playlist-card">
+		<a href="/playlists/<%= playlist.playlist_id %>">
+			<img class="playlist-cover" src="<%= playlist.cover %>" alt="">
+		</a>
+		<div class="playlist-title">
+			<a href="/playlists/<%= playlist.playlist_id %>">
+			<% if (playlist.liked) { %>
+				<i class="bi bi-heart-fill"></i>
+			<% } else { %>
+				<i class="bi bi-lock-fill"></i>
+			<% } %>
+			<%= playlist.playlist_name %>
+			</a>
+		</div>
+	</div>
+	<% }); %>
 </div>
-
+</main>
 <!-- <script>
   document.querySelectorAll('.playlist-header').forEach(header => {
     header.addEventListener('click', (e) => {
