Update list to be horizontally in ejs file

--- a/src/views/vwPlaylist/playlist.ejs
+++ b/src/views/vwPlaylist/playlist.ejs
@@ -4,8 +4,7 @@
   <h1 class="greeting">Hello, <%= username %>, what is your playlist to listen to today?</h1>
   <a href="/playlists/create" class="create-playlist">CREATE PLAYLIST</a>
 </div>
-
-<div class="playlist-grid">
+<div class="playlist-container">
   <div class="playlist-header">
     <h1>Hear your own playlists and the playlists you've liked:</h1>
     <div class="filter-container">
@@ -16,25 +15,27 @@
     </div>
   </div>
 
-  <div class="container-fluid p-0">
-    <div class="row row-cols-2 row-cols-md-3 row-cols-lg-6 g-3">
-      <!-- Playlist 1 -->
-      <div class="col">
-        <div class="playlist-card">
-          <div class="playlist-image">
-            <img src="/api/placeholder/300/300" alt="Playlist cover">
-            <div class="playlist-lock">
-              <svg width="16" height="16" fill="none" stroke="white" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
-                  d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z">
-                </path>
-              </svg>
-            </div>
-          </div>
-          <p class="playlist-title">playlist name</p>
-          <p class="playlist-creator">creator</p>
+  <div class="playlist-scroll">
+    <!-- Playlist 1 -->
+    <div class="playlist-card">
+      <div class="playlist-image">
+        <img src="/api/placeholder/300/300" alt="Playlist cover">
+        <div class="playlist-lock">
+          <svg width="16" height="16" fill="none" stroke="white" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
+              d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z">
+            </path>
+          </svg>
         </div>
       </div>
+      <p class="playlist-title">title name</p>
+      <p class="playlist-creator">user created name</p>
+    </div>
+
+
+    <!-- Add more playlist cards as needed -->
+  </div>
+</div>
 
 
 
